kubernetes/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        # these settings ensure that Jellyfin runs with the correct user and group IDs
        # which are necessary for file permissions on the host system
        runAsUser: 101000
        runAsGroup: 110000
        fsGroup: 110000
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
            - containerPort: 8920
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: jellyfin-media
              mountPath: /media
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /home/nas/shared/pvcs/jellyfin-config
        - name: jellyfin-cache
          hostPath:
            path: /home/nas/shared/pvcs/jellyfin-cache
        - name: jellyfin-media
          hostPath:
            path: /home/nas/media
