kubernetes/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096
    - name: https
      protocol: TCP
      port: 8920
      targetPort: 8920
  type: ClusterIP
