kubernetes/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames:
    - jellyfin.k8s.weinbender.io
  parentRefs:
    - kind: Gateway
      name: cluster-gateway
      namespace: cluster-gateway
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - kind: Service
          name: jellyfin
          namespace: jellyfin
          port: 8096
          group: ""
          weight: 1
